// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders 1`] = `
<ConfigLayout
  hideSettings={true}
  settings={null}
>
  <div>
    <div>
      <RadioGroup
        aria-label="rubric-type"
        name="rubricType"
        onChange={[Function]}
        value="simpleRubric"
      >
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Radio)
              checked={true}
            />
          }
          label="Simple Rubric"
          value="simpleRubric"
        />
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Radio)
              checked={false}
            />
          }
          label="Multi Trait Rubric"
          value="multiTraitRubric"
        />
      </RadioGroup>
    </div>
    <div>
      <rubric-configure
        id="simpleRubric"
        key="simple-rubric"
      />
    </div>
  </div>
</ConfigLayout>
`;

exports[`Main snapshot renders multi trait rubric 1`] = `
<ConfigLayout
  hideSettings={true}
  settings={null}
>
  <div>
    <div>
      <RadioGroup
        aria-label="rubric-type"
        name="rubricType"
        onChange={[Function]}
        value="multiTraitRubric"
      >
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Radio)
              checked={false}
            />
          }
          label="Simple Rubric"
          value="simpleRubric"
        />
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Radio)
              checked={true}
            />
          }
          label="Multi Trait Rubric"
          value="multiTraitRubric"
        />
      </RadioGroup>
    </div>
    <div>
      <multi-trait-rubric-configure
        id="multiTraitRubric"
        key="multi-trait-rubric"
      />
    </div>
  </div>
</ConfigLayout>
`;

exports[`Main snapshot renders simple rubric 1`] = `
<ConfigLayout
  hideSettings={true}
  settings={null}
>
  <div>
    <div>
      <RadioGroup
        aria-label="rubric-type"
        name="rubricType"
        onChange={[Function]}
        value="simpleRubric"
      >
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Radio)
              checked={true}
            />
          }
          label="Simple Rubric"
          value="simpleRubric"
        />
        <WithStyles(WithFormControlContext(FormControlLabel))
          control={
            <WithStyles(Radio)
              checked={false}
            />
          }
          label="Multi Trait Rubric"
          value="multiTraitRubric"
        />
      </RadioGroup>
    </div>
    <div>
      <rubric-configure
        id="simpleRubric"
        key="simple-rubric"
      />
    </div>
  </div>
</ConfigLayout>
`;
